* v0.0.1 (June 10th, 2015)
  - (...)


* v1.0 (September 12th, 2016)
  - (...)


* v1.1 (February 20th, 2017)

  - macOS and Windows support
  - New checks:
    child-event-qobject-cast
    ctor-missing-parent-argument
    returning-data-from-temporary
    qt-macros
    base-class-event
    connect-non-signal
    incorrect-emit
    tr-non-literal
  - Fixes against clang 4.0
  - Fixes against Qt 5.9
  - 60% performance improvement
  - Fixed many false positives


* v1.2 ()
  - ASTMatchers based checks are now supported
  - New checks:
    install-event-filter
  - clazylib.so no longer gets built by default, only the plugin (ClangLazy.so)
    gets built. Pass -DCLAZY_BUILD_UTILS_LIB=ON to enable the utils library if
    you're developing tools using clazy's convenience functions, which you're
    probably not.
  - CLAZY_INSTALL_NO_HEADERS option was removed. Either install the utils library
    and headers or nothing at all. By default nothing is installed, except
    the plugin and man pages.